stable/echo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  ports:
    - port: 80
        targetPort: http
        protocol: TCP
        name: echo
  selector:
    app: echo
