stable/echo/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
spec:
  rules:
    - host: sjoh1-stable.echo.local
      http:
        paths:
        - path: /
          backend:
            serviceName: echo
            servicePort: 80
